Batch insert directories with subdirectories
